--- a/CONFIG.json
+++ b/CONFIG.json
@@ -15,7 +15,7 @@
             "name":"new",
             "enter_date":"Введите дату, когда хотите стримить в формате: <b>2021/11/25</b>",
             "check_ok":"Ok!",
-            "re_date_match": "^202\d\/((1[0-2])|(0?[1-9]))\/((1[0-9])|(2[0-9])|(3[0-1])|(0?[0-9]))$",
+            "re_date_match": "^202[0-9]\/((1[0-2])|(0?[1-9]))\/((1[0-9])|(2[0-9])|(3[0-1])|(0?[0-9]))$",
             "enter_time":"Введите время, когда хотите стримить в формате: <b>12:25</b>"
        },
        "delete":"delete",
