--- a/CONFIG_ENG.json
+++ b/CONFIG_ENG.json
@@ -26,7 +26,7 @@
        "delete":
        {
            "name":"delete",
-           "enter_time_delete":"Enter the date in format <b>2021/11/25-12:25</b> of sign, whic you want to delete",
+           "enter_time_delete":"Enter the date in format <b>2021/11/25-12:25</b> of sign, which you want to delete",
            "re_date_time_match":"^202[0-9]\/((1[0-2])|(0?[1-9]))\/((1[0-9])|(2[0-9])|(3[0-1])|(0?[0-9]))-(([0,1][0-9])|(2[0-3])):[0-5][0-9]$",
            "deleted":"Sign is deleted!",
            "wrong_format":"Wrong format, enter again."
