--- a/CONFIG_ENG.json
+++ b/CONFIG_ENG.json
@@ -16,9 +16,9 @@
             "enter_date":"Enter the date in format: <b>2021/11/25</b>",
             "check_ok":"Ok!",
             "re_date_match": "^202[0-9]\/((1[0-2])|(0?[1-9]))\/((1[0-9])|(2[0-9])|(3[0-1])|(0?[0-9]))$",
-            "enter_time_beg":"Enter the time, when you plan to start streaming: <b>12:25</b>",
+            "enter_time_beg":"Enter the time, when you plan to start streaming in format: <b>12:25</b>",
             "wrong_date":"Wrong date format, enter again.",
-            "enter_time_end":"Enter the time, when you plan to finish streaming: <b>12:25</b>",
+            "enter_time_end":"Enter the time, when you plan to finish streaming in format: <b>12:25</b>",
             "wrong_time":"Wrong time format, enter again.",
             "re_time_match":"^(([0,1][0-9])|(2[0-3])):[0-5][0-9]$",
             "written":"Signed!"
