--- a/CONFIG_RUS.json
+++ b/CONFIG_RUS.json
@@ -21,7 +21,12 @@
             "enter_time_end":"Введите время, когда закончите стримить в формате: <b>12:25</b>",
             "wrong_time":"Неверный формат времени, введите заново.",
             "re_time_match":"^(([0,1][0-9])|(2[0-3])):[0-5][0-9]$",
-            "written":"Записано!"
+            "written":"Записано!",
+            "inline_today":"today",
+            "inline_tomorrow":"tomorrow",
+            "inline_other":"other",
+            "start_date":"Введите дату:",
+            "cant_be_later":"Вы не можете закончить раньше, чем начали!\nВведите допустмое время:"
        },
        "delete":
        {
@@ -41,6 +46,11 @@
            "streams_for_today":"Ваши стримы за сегодня:",
            "no_streams_for_today":"У вас сегодня нет стримов!"
 
+       },
+       "stat":
+       {
+           "name":"stat",
+           "pattern":"Статистика <b>{}</b>.\n За месяц: {} часов.\n За все время {} часов."
        }
     },
     "common":
