--- a/CONFIG_RUS.json
+++ b/CONFIG_RUS.json
@@ -26,7 +26,7 @@
             "inline_tomorrow":"tomorrow",
             "inline_other":"other",
             "start_date":"Введите дату:",
-            "cant_be_later":"Вы не можете закончить раньше, чем начали!\nВведите допустмое время:"
+            "cant_be_later":"Вы не можете закончить раньше, чем начали!\nВведите допустимое время:"
        },
        "delete":
        {
