--- a/CONFIG_RUS.json
+++ b/CONFIG_RUS.json
@@ -26,7 +26,9 @@
             "inline_tomorrow":"tomorrow",
             "inline_other":"other",
             "start_date":"Введите дату:",
-            "cant_be_later":"Вы не можете закончить раньше, чем начали!\nВведите допустимое время:"
+            "cant_be_later":"Вы не можете закончить раньше, чем начали!\nВведите допустимое время:",
+            "reg_for_tom":"Зарегистрировано на завтра!",
+            "reg_for_tod":"Зарегистрировано на сегодня!"
        },
        "delete":
        {
