--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ mccabe==0.6.1
 mpmath==1.1.0
 numpy==1.19.4
 pycodestyle==2.6.0
-Pygments==2.7.3.dev20201226
+Pygments==2.7.3
 pylint==2.6.0
 pyTelegramBotAPI==3.7.4
 requests==2.25.1
