changed sql structure a little bit

--- a/CONFIG_ENG.json
+++ b/CONFIG_ENG.json
@@ -1,6 +1,6 @@
 {"setup":
     {
-        "database": "streamers",
+        "database": "streamers.db",
         "lang":"Choose bot language:",
         "start":"Choose language:",
         "languages":
