--- a/CONFIG_RUS.json
+++ b/CONFIG_RUS.json
@@ -15,7 +15,7 @@
        {
            "name":"start",
            "begin_button":"Начать!",
-           "hello":"Приветствую, <b>{0.first_name}</b>!\n Это бот, созданный для организации процесса стриминга в нашем проекте. Здесь ты можешь отмечать время, когда ты будешь стримить, а так же выполнять некоторые другие действия. Чтобы работать с ботом, вводи команды с помощью <b>/</b>. Удачи!"
+           "hello":"Приветствую, <b>{0.first_name}</b>!\n Это бот, созданный для организации процесса стриминга в нашем проекте. Здесь ты можешь отмечать время, когда ты будешь стримить, а так же выполнять некоторые другие действия. Чтобы работать с ботом, вводи команды с помощью <b>/</b>. Ты всегда можешь изменить дисциплину с помощью <b>/discipline</b>. Удачи!"
        },
        "discipline": {
         "name": "discipline",
