does not work))))

--- a/CONFIG_ENG.json
+++ b/CONFIG_ENG.json
@@ -43,8 +43,8 @@
             "inline_other":"other",
             "start_date":"Enter date:",
             "cant_be_later":"End time can't be later, than begin!\nEnter right time:",
-            "reg_for_tom":"Signed for today!",
-            "reg_for_tod":"Signed for tomorrow!"
+            "reg_for_tom":"Signed for tomorrow!",
+            "reg_for_tod":"Signed for today!"
        },
        "delete":
        {
